Fixed horizontal scrolling issue on landing page video.

--- a/src/App.css
+++ b/src/App.css
@@ -210,7 +210,7 @@
   height: 100vh;
   font-size: calc(1em + 2vmin);
   font-family: 'Unbounded';
-  
+  overflow-x:hidden;
  
 }
 .Main-text{
